--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,7 @@
         android:background="#ffffff"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/activity_main"
-        tools:context=".MainActivity">
+        tools:context=".activities.MainActivity">
 
     <ScrollView android:layout_width="match_parent"
                 android:layout_height="wrap_content"
