--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.spencerstudios.ukinflationcalculator.MainActivity">
+      tools:context="com.spencerstudios.ukinflationcalculator.activities.MainActivity">
+
+    <item android:id="@+id/action_share"
+          android:title="Share"
+          android:orderInCategory="100"
+          app:showAsAction="ifRoom"
+          android:icon="@drawable/baseline_share_white_24"
+          tools:ignore="HardcodedText"/>
 
     <item android:id="@+id/action_settings"
           android:title="About"
