--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -138,6 +138,17 @@
                     android:textColor="@color/textColor"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/raleway"/>
+
+            <com.github.mikephil.charting.charts.LineChart
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:layout_marginEnd="24dp"
+                    android:id="@+id/chart"/>
+
+            <View android:layout_width="match_parent" android:layout_height="30dp"/>
+
         </LinearLayout>
+
+
     </ScrollView>
 </LinearLayout>
