--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -139,13 +139,16 @@
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/raleway"/>
 
-            <com.github.mikephil.charting.charts.LineChart
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:layout_marginEnd="24dp"
-                    android:id="@+id/chart"/>
 
-            <View android:layout_width="match_parent" android:layout_height="30dp"/>
+                <com.github.mikephil.charting.charts.LineChart
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:id="@+id/chart"/>
+
+
+
+            <View android:layout_width="match_parent"
+                  android:layout_height="30dp"/>
 
         </LinearLayout>
 
