mods and additions

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -140,7 +140,7 @@
                     android:fontFamily="@font/raleway"/>
 
 
-                <com.github.mikephil.charting.charts.LineChart
+                <com.github.mikephil.charting.charts.BarChart
                         android:layout_width="match_parent"
                         android:layout_height="300dp"
                         android:id="@+id/chart"/>
